tests/fixtures/valid/builtins/len.py
# Valid len() calls
# Auto-generated by scripts/generate_tests.py

b0_len_str = len("hello")
b1_len_bytes = len(b"hello")
b2_len_list = len([1, 2, 3])
b3_len_dict = len({"a": 1})
b4_len_set = len({1, 2, 3})

print("len() tests passed!")
