tests/fixtures/invalid/max_dict_list.py
# Cannot call max() with Dict[str, int], List[int]
x = max({"a": 1}, [1, 2, 3])
